--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install: "pip install -r requirements.txt --use-mirrors"
 script: py.test
 
 virtualenv:
-  system_site_packates: true
+  system_site_packages: true
 
 before_install:
   - sudo apt-get install -qq python-numpy python.scipy python-qt4
