--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.7"
 
-install: "pip install -r requirements.txt --use-mirrors"
+install: "easy_install pyopenms; pip install -r requirements.txt --use-mirrors"
 script: py.test
 
 virtualenv:
