--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,12 @@ language: python
 python:
   - "2.7"
 
-install: "easy_install pyopenms; pip install -r requirements.txt --use-mirrors"
+install: 
+   - easy_install pyopenms
+   - pip install "Cython>=0.19.0"
+   - pip install guidata==1.6.0
+   - pip install guiqwt==2.3.1
+   - pip install -r requirements.txt --use-mirrors
 script: py.test
 
 virtualenv:
