[GIT] improved .gitignore for handling py.test files and folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.pyc
-*.swp
+*.swn
 *.swo
+*.swp
+*.swq
 *.bak
 sandbox
 *.ropeproject
@@ -13,3 +15,6 @@ logs
 build/
 dist/
 *.egg-info
+.cache
+.coverage
+.pytest
