[FETAURE] got R stuff running

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,12 @@ install:
    - pip install guidata==1.6.0
    - pip install guiqwt==2.3.1
    - pip install -r requirements.txt --use-mirrors
-script: py.test
+script: py.test -s
 
 virtualenv:
   system_site_packages: true
 
 before_install:
   - sudo apt-get install -qq python-numpy python.scipy python-qt4
+  - sudo apt-get install -qq r-base
+
