--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
    - pip install guidata==1.6.0
    - pip install guiqwt==2.3.1
    - pip install -r requirements.txt --use-mirrors
-script: py.test -s
+script: py.test
 
 virtualenv:
   system_site_packages: true
