--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ guidata==1.6.0
 guiqwt==2.3.1
 matplotlib==1.3.0
 nose==1.1.2
-numpy==1.7.1
+#numpy==1.7.1
 pytest==2.3.5
 requests==1.2.3
-scipy==0.12.0
+#scipy==0.12.0
 spyder==2.2.1
