[FIX] for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ install:
    - pip install guidata==1.6.0
    - pip install guiqwt==2.3.1
    - pip install -r requirements.txt --use-mirrors
-script: py.test
+   - pip install -U pytest==2.3.5
+script: 
+   - py.test --debug
+   - echo pytestdebug.log
 
 virtualenv:
   system_site_packages: true
@@ -16,4 +19,5 @@ virtualenv:
 before_install:
   - sudo apt-get install -qq python-numpy python.scipy python-qt4
   - sudo apt-get install -qq r-base
+  - sudo apt-get install -qq python-matplotlib
 
