--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
    - pip install -U pytest==2.3.5
 script: 
    - py.test --debug
-   - echo pytestdebug.log
+   - cat pytestdebug.log
+   - true
 
 virtualenv:
   system_site_packages: true
