--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,7 @@ install:
    - pip install -r requirements.txt --use-mirrors
    - pip install -U pytest==2.3.5
 script: 
-   - py.test --debug
-   - cat pytestdebug.log
-   - true
+   - py.test -s
 
 virtualenv:
   system_site_packages: true
