--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,23 @@
 language: python
 python:
-  - "2.7"
-
-install: 
-   - easy_install pyopenms
-   - pip install "Cython>=0.19.0"
-   - pip install guidata==1.6.0
-   - pip install guiqwt==2.3.1
-   - pip install -r requirements.txt --use-mirrors
-script: 
-   - py.test -s -v --debug tests/
-   - cat pytestdebug.log
-
+- '2.7'
+install:
+- easy_install pyopenms
+- pip install "Cython>=0.19.0"
+- pip install guidata==1.6.0
+- pip install guiqwt==2.3.1
+- pip install -r requirements.txt --use-mirrors
+script:
+- py.test -s -v --debug tests/
+- cat pytestdebug.log
 virtualenv:
   system_site_packages: true
-
 before_install:
-  - sudo apt-get install -qq python-numpy python.scipy python-qt4
-  - sudo apt-get install -qq r-base
-  - sudo apt-get install -qq python-matplotlib
+- sudo apt-get install -qq python-numpy python.scipy python-qt4 python-qwt5-qt4
+- sudo apt-get install -qq r-base
+- sudo apt-get install -qq python-matplotlib
+- sudo apt-get install -qq r-cran-rmpi r-cran-rsprng
+- sudo apt-get install -qq libnetcdf-dev libfftw3-dev
+env:
+  global:
+  - secure: deuH2sc43ASKWQAKLWonGE7JuwIs/AsjKMEZwu6qHKCHE8hk8Dn8rZ7akFUN1UzykYg3sfbr5GZulNIGtpfzeK35vN/AcMPQFixfbyfYS1JmzQxEvATeXThN6G/AQ5CoCZRNCaDBv9egb9tjNm8TpYJPtAO2qmBks+O67I003WE=
