--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 - pip install -r requirements.txt --use-mirrors
 script:
 - py.test -s -v --debug tests/
-- cat pytestdebug.log
+- py.test -s -v --debug integration_tests/
 virtualenv:
   system_site_packages: true
 before_install:
