[TRAVIS] tried  to fix integration test test_xcms_connector.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
 script:
 - py.test -s -v --debug tests/
 - py.test -s -v --debug integration_tests/
+- cat pytestdebug.log
 virtualenv:
   system_site_packages: true
 before_install:
