--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ install:
 - pip install guiqwt==2.3.1
 - pip install -r requirements.txt --use-mirrors
 script:
+- python setup.py develop
 - py.test -s -v --debug tests/
+- py.test -s -v --debug integration_tests/
 virtualenv:
   system_site_packages: true
 before_install:
