--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ install:
 - pip install -r requirements.txt --use-mirrors
 script:
 - python setup.py develop
-- py.test -s -v --debug integration_tests/
-- py.test -s -v --debug tests/
+- py.test -v --debug tests/
 virtualenv:
   system_site_packages: true
 before_install:
