--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ python:
 - '2.7'
 install:
 - easy_install pyopenms
-- pip install "Cython>=0.19.0"
-- pip install guidata==1.6.0
+- pip install "pip>=1.4"
+- pip install cython
+- pip install guidata==1.6.1
 - pip install guiqwt==2.3.1
 - pip install -r requirements.txt --use-mirrors
 - python setup.py develop
