--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ python:
 install:
 - easy_install pyopenms
 - pip install -U "pip>=1.4"
-- pip install --use-wheel cython
-- pip install --allow-all-external guidata==1.6.1
 - pip install --use-wheel numpy
 - pip install --use-wheel scipy
-- pip install --allow-all-external guiqwt==2.3.1
+- pip install --use-wheel cython
+- pip install --allow-all-external --allow-unverified guidata
+- pip install --allow-all-external --allow-unverified guiqwt
 - pip install -r requirements.txt --use-mirrors
 - python setup.py develop
 script:
