--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
 - pip install -U pip 
 - pip install -U setuptools
 - pip install -U wheel
-- pip install --use-wheel pyopenms
+- easy_install  pyopenms
 - pip install --use-wheel cython
 - pip install --allow-all-external --allow-unverified guidata guidata
 - pip install --allow-all-external --allow-unverified guiqwt guiqwt
