SSDM-1548: include spyder 2.1.13 fully into emzed
    easy_install does not find spyder 2.1.13 anymore, it was removed
    form python package index.
    now spyder is installed during first startup.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include emzed/workbench/*.png
 include emzed/workbench/*.xpm
+include emzed/workbench/spyder-2.1.13.zip
 include emzed/core/r_connect/*.txt
 include emzed/core/explorers/*.html
